# pyemoodji

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pyemoodji.rst
pyemoodji/: counter.py  pyemoodji.py  sentiment_df.py  sentiment_plot.py  textsentiment_to_emoji.py
tests/: test_pyemoodji.py
