[tool.poetry]
name = "pyemoodji"
version = "0.1.0"
description = "Python package that does the sentiment analysis for the input text and replace emotion words with emoji"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
